cmake_minimum_required(VERSION 3.21)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(24 24.cpp)
add_executable(34 34.cpp)
add_executable(49 49.cpp)
add_executable(84 84.cpp)
add_executable(38 38.cpp)
add_executable(39 39.cpp)
add_executable(40 40.cpp)
add_executable(13 13.cpp)
add_executable(27 27.cpp)
add_executable(82 82.cpp)
add_executable(83 83.cpp)
add_executable(58 58.cpp)
add_executable(28 28.cpp)
add_executable(71 71.cpp)
add_executable(1249 1249.cpp)