cmake_minimum_required(VERSION 3.21)
project(LeetCode)

set(CMAKE_CXX_STANDARD 14)

add_executable(24 24.cpp)
add_executable(34 34.cpp)
add_executable(49 49.cpp)
add_executable(84 84.cpp)
add_executable(38 38.cpp)
add_executable(39 39.cpp)
add_executable(40 40.cpp)
add_executable(13 13.cpp)
add_executable(27 27.cpp)
add_executable(82 82.cpp)
add_executable(83 83.cpp)
add_executable(58 58.cpp)
add_executable(28 28.cpp)
add_executable(71 71.cpp)
add_executable(1249 1249.cpp)
add_executable(946 946.cpp)
add_executable(856 856.cpp)
add_executable(316 316.cpp)
add_executable(895 895.cpp)
add_executable(66 66.cpp)
add_executable(74 74.cpp)
add_executable(344 344.cpp)
add_executable(680 680.cpp)
add_executable(31 31.cpp)
add_executable(1721 1721.cpp)